# EloXL

./: .gitignore  CHANGELOG.md  EloXL.py  EloXL.xlsm  README.md  fbd.json  requirements.txt  setup.cfg
app/data/: FBApi.py  elo.py  run_calcs.py  updater.py  updater_json.py  write_statics.py
app/data/static/: __init__.py
app/json/: ASL.json  BL.json  BSA.json  DED.json  ELC.json  FL1.json  PD.json  PL.json  PPL.json  SA.json  areas.json  competitions-all.json  competitions-plus3.json  competitions-stored.json  teams.json
latex/: EloXL.tex
