[metadata]
name = EloXL
version = 0.0.1
author = Alex Munger
author-email = munger.alex@gmail.com
author-url = https://amunger3.github.io
home-page = https://github.com/amunger3/EloXL
description = Elo Ratings for Football in Excel
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = data, elo, football, sports, soccer, statistics, xlwings, excel
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics

[flake8]
ignore =
    D203,
    E121,
    E123,
    E126,
    E127,
    E128,
    E201,
    E202,
    E203,
    E241,
    E402,
    E501,
    F401,
    W292,
    W504
exclude =
    .git,
    env,
    __pycache__,
    node_modules,
    build/,
    dist/,
    docs/,
    tests/
max-complexity = 15
max-line-length = 99